--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "dev": "nodemon server/server.js",
         "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
-        "start": "nodemon server/server.js"
+        "start": "node server/server.js"
     },
     "keywords": [],
     "author": "",
