--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "license": "ISC",
     "type": "commonjs",
     "dependencies": {
+        "axios": "^1.13.2",
         "body-parser": "^2.2.0",
         "cors": "^2.8.5",
         "dotenv": "^16.5.0",
